Adding gradle task for running feature tests automatically